# itlab_slides

./: .gitignore  00-intro.tex  01-git.tex  01-git.toc  02-cmake.tex  03-linux.tex  04-cpp-project-structure.tex  05-embedded-arm.tex  LICENSE  README.md  index.html
.github/workflows/: build.yml
00-intro/: 00-intro.tex
01-git/: 01-git.tex  01-git.toc
02-cmake/: 02-cmake.tex  02-cmake.toc
02-cmake/examples/: README.md
02-cmake/examples/hello/: CMakeLists.txt  CMakePresets.json  README.md
02-cmake/examples/modern/: CMakeLists.txt  CMakePresets.json  README.md
02-cmake/examples/modern/lib/: CMakeLists.txt
02-cmake/examples/modern/lib/include/add/: add.h
02-cmake/examples/modern/lib/src/: add.cpp
02-cmake/examples/modern/src/: CMakeLists.txt  main.cpp
02-cmake/examples/modern/tests/: CMakeLists.txt  tests.cpp
02-cmake/examples/modern/toolchains/: arm-none-eabi.cmake
02-cmake/examples/steps/: README.md
02-cmake/examples/steps/01-hello-plain/: README.md
02-cmake/examples/steps/02-hello-cmake/: CMakeLists.txt  README.md
02-cmake/examples/steps/02-hello-cmake/src/: main.cpp
02-cmake/examples/steps/03-lib-cmake/: CMakeLists.txt  README.md
02-cmake/examples/steps/03-lib-cmake/src/: main.cpp
02-cmake/examples/steps/04-targets-modern/: CMakeLists.txt  README.md
02-cmake/examples/steps/04-targets-modern/src/: add.cpp  main.cpp
02-cmake/examples/steps/05-deps-fmt-find_package/: CMakeLists.txt  README.md
02-cmake/examples/steps/05-deps-fmt-find_package/src/: main.cpp
02-cmake/examples/steps/06-testing-ctest-gtest/: CMakeLists.txt  README.md
02-cmake/examples/steps/06-testing-ctest-gtest/src/: main.cpp
02-cmake/examples/steps/06-testing-ctest-gtest/tests/: tests.cpp
02-cmake/examples/steps/07-presets/: CMakeLists.txt  CMakePresets.json  README.md
02-cmake/examples/steps/07-presets/src/: main.cpp
02-cmake/examples/steps/08-toolchain-arm/: CMakeLists.txt  README.md
02-cmake/examples/steps/08-toolchain-arm/toolchains/: arm-none-eabi.cmake
02-cmake/examples/steps/09-install-cpack/: CMakeLists.txt  README.md
02-cmake/examples/steps/09-install-cpack/include/add/: add.h
02-cmake/examples/steps/09-install-cpack/src/: main.cpp
02-cmake/examples/steps/10-visual-studio/: CMakeLists.txt  README.md
02-cmake/examples/steps/10-visual-studio/src/: main.cpp
03-linux/: 03-linux.tex  03-linux.toc
04-cpp-project-structure/: 04-cpp-project-structure.tex
05-embedded-arm/: 05-embedded-arm.tex
06-dl-tech-intro/: 06-dl-tech-intro.tex  06-dl-tech-intro.toc
07-acl/: 07-acl.tex  07-acl.toc
08-openvino/: 08-openvino.tex  08-openvino.toc
09-android-intro/: 09-android-intro.tex  homework-hello-android.md
